Fix right carousel control alignmenet

--- a/src/SimplyTestable/WebsiteBundle/Resources/assets/css/homepage.css
+++ b/src/SimplyTestable/WebsiteBundle/Resources/assets/css/homepage.css
@@ -28,6 +28,7 @@
 
 .carousel-control.right {
     background-image: none;
+    padding-right: 20px;
 }
 
 .carousel-control .fa {
